--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -6,6 +6,7 @@ $cyan: hsl(182, 43%, 76%);
 $limeGreen: hsl(174, 36%, 64%);
 // $cement: hsl(203, 39%, 44%);
 $cement: hsl(135, 8%, 72%);
+$wetCement: hsl(49, 6%, 34%);
 
 // Font Sizes
 $font-s: 0.875rem; // 14px
