--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,29 +1,28 @@
-@import 'variables';
+@import "variables";
 
-.header{
+.header {
+  //Hamburger Open Styles
+  &.open {
+    .overlay {
+      display: block;
+    }
 
-    //Hamburger Open Styles
-    &.open{
-        .overlay {
-            display: block;
-        }
- 
-        .header__toggle{
-            > span:first-child{
-                transform: rotate(45deg);
-            }
-        
-            > span:nth-child(2){
-                opacity: 0;
-            }
-            
-            > span:last-child{
-                transform: rotate(-45deg);
-            }
-        }
-}
+    .header__toggle {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
 
-.overlay{
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
     opacity: 0;
     position: fixed;
     top: 0px;
@@ -31,113 +30,106 @@
     bottom: 0;
     left: 0;
     background-image: linear-gradient($apeBlue, transparent);
-}
+  }
 
-nav{
+  nav {
     position: relative;
     background-color: white;
-    padding-top: 1.5625rem;
-    padding-bottom: 1.5625rem;
-}
-    &__logo{
-       img{
-        width: 6.8125rem;
-        height: 6.8125rem;
-       }
+    padding-top: 0.5625rem;
+    padding-bottom: 0.5625rem;
+  }
+  &__logo {
+    img {
+      max-width: 50%;
+    }
+  }
+
+  &__toggle {
+    //Mobile Menu Toggle
+
+    > span {
+      display: block;
+      width: 26px;
+      height: 3px;
+      background-color: $apeBlue;
+      transition: all 300ms ease-in-out;
+      transform-origin: 5px 1px;
+
+      &:not(:last-child) {
+        margin-bottom: 3px;
+      }
     }
 
-    &__toggle{ //Mobile Menu Toggle
+    &.open {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
 
-        > span{
-            display: block;
-            width: 26px;
-            height: 3px;
-            background-color: $apeBlue;
-            transition: all 300ms ease-in-out;
-            transform-origin: 5px 1px;
+      > span:nth-child(2) {
+        opacity: 0;
+      }
 
-            &:not(:last-child){
-                margin-bottom: 3px;
-            }
-        }
-
-        &.open{
-
-            > span:first-child{
-                transform: rotate(45deg);
-            }
-
-            > span:nth-child(2){
-                opacity: 0;
-            }
-            
-            > span:last-child{
-                transform: rotate(-45deg);
-            }
-        }
-
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
     }
+  }
 
-    &__menu {
+  &__menu {
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    transform: translateX(-50%);
+    background: $offWhite;
+    margin-top: 1.5rem;
+    padding: 1.625rem;
+    border-radius: 5px;
+
+    a {
+      display: block;
+      padding: 0.625rem;
+      color: $apeBlue;
+      text-align: center;
+    }
+  }
+
+  &__links {
+    a {
+      position: relative;
+      font-size: $font-m;
+      color: $apeBlue;
+      transition: color 300ms ease-in-out;
+
+      &:not(:last-child) {
+        margin-right: 32px;
+      }
+
+      &::before {
+        content: "";
+        display: block;
         position: absolute;
-        width: calc(100% - 3rem);
-        left: 50%;
-        transform: translateX(-50%);
-        background: $offWhite;
-        margin-top: 1.5rem;
-        padding: 1.625rem;
-        border-radius: 5px;
-        
-
-        a {
-            display: block;
-            padding: 0.625rem;
-            color: $apeBlue;
-            text-align: center;
-        }
-    }
-
-    &__links{
-
-        a{
-           position: relative;
-           font-size: $font-m; 
-           color: $apeBlue;
-           transition: color 300ms ease-in-out;
-
-           &:not(:last-child){
-            margin-right: 32px;
-           }
-
-           &::before{
-            content: "";
-            display: block;
-            position: absolute;
-            height: 5px;
-            left: 0;
-            right: 0;
-            bottom: -30px;
-            background: $deepOrange;
-            opacity: 0;
-            transition: opacity 300ms ease-in-out;
-           }
-           &:hover{
-            color: $deepOrange;
-
-            &::before{
-               opacity: 1; 
-            }
-           }
-        }
-    }
-    &__cta{
+        height: 5px;
+        left: 0;
+        right: 0;
+        bottom: -30px;
+        background: $deepOrange;
+        opacity: 0;
         transition: opacity 300ms ease-in-out;
+      }
+      &:hover {
+        color: $deepOrange;
 
-        &:hover{
-            opacity: 0.75;
+        &::before {
+          opacity: 1;
         }
+      }
     }
+  }
+  &__cta {
+    transition: opacity 300ms ease-in-out;
+
+    &:hover {
+      opacity: 0.75;
+    }
+  }
 }
-
-
-
