--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,50 +1,72 @@
-.about_us{
-    display: flex;
+.about_us {
+  display: flex;
 }
 
 .about_us_images {
-    display: inline;
-    max-width: 10%;
-    margin-bottom: auto;
-    padding: 2%;
+  display: inline;
+  max-width: 10%;
+  margin-bottom: auto;
+  padding: 2%;
 }
 
 .checklist {
-    width: 140rem;
-    background-color: aqua;
+  width: 140rem;
+  background-color: $wetCement;
+  color: $offWhite;
 }
 
-.list_with_leftImage{
-    display: flex;
+.list_with_leftImage {
+  display: flex;
 }
 
 .about {
-    display: flex;
-    flex-direction: column;
-    background-color: floralwhite;
+  display: flex;
+  flex-direction: column;
+  background-color: $offWhite;
 }
 
-.about_us_title{
-    margin-bottom: 0;
-    text-align: center;
-    font-size: $font-l;
+.about_us_title {
+  margin-bottom: 0;
+  text-align: center;
+  font-size: $font-l;
 }
 
-.about_us_content{
-    text-align: center;
+.about_us_content {
+  text-align: center;
 }
 
 .get_in_touch {
-    background-color: rosybrown;
-    color: $offWhite;
+  background-color: $deepOrange;
+  color: $offWhite;
+  padding: 1rem;
+  gap: 10px;
+
+  &__heading {
+    margin: 1px;
+  }
+
+  &__sentence {
+    display: block;
+    font-size: $font-s;
+  }
 }
 
 @media (max-width: 50em) {
-    .about_us {
-        flex-direction: column;
+  .about_us {
+    flex-direction: column;
+  }
+
+  .checklist {
+    width: 100%;
+  }
+
+  .get_in_touch {
+    &__heading {
+      margin: auto;
     }
 
-    .checklist {
-        width: 100%;
+    &__cta {
+      margin: auto;
     }
+  }
 }
